# universeg-rust

./: .gitignore  Cargo.toml  README.md
sql/: v1.sql
src/: bootstrap.rs  lib.rs  main.rs  state.rs
src/app/: mod.rs  ports.rs
src/app/usecases/auth/: get_info.rs  login.rs  register.rs
src/app/usecases/user/: get_info.rs
src/controllers/: auth.rs
src/domain/auth/: mod.rs  user.rs
src/domain/user/: errors.rs  vo.rs
src/dto/: auth_dto.rs
src/infra/: config.rs  db.rs
src/infrastructure/: config.rs  errors.rs  logger.rs  mod.rs
src/infrastructure/mongo/: connection.rs
src/infrastructure/postgres/: user_repo.rs
src/infrastructure/security/: jwt.rs  password.rs
src/infrastructure/swagger/: config.rs
src/interface/rest/: mod.rs  state.rs
src/interface/rest/controllers/: auth.rs  user.rs
src/interface/rest/dto/: auth.rs  user.rs
src/interface/rest/middlewares/: auth.rs
src/interface/rest/routes/: auth.rs  mod.rs  user.rs
src/routes/: auth.rs  mod.rs
tests/: mod.rs
tests/common/: mod.rs
tests/domain/user/: user_test.rs  user_vo_test.rs
tests/interface/auth/: login.rs  login_dto_tests.rs  password_validation_tests.rs  register.rs  register_dto_tests.rs
tests/interface/user/: get_info.rs
