[package]
name = "universeg-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
validator = { version = "0.20.0", features = ["derive"] }
async-trait = "0.1.89"
futures = "0.3.31"
regex = "1.11.2"
lazy_static = "1.5.0"
once_cell = "1.21.3"
