[package]
name = "universeg-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros", "chrono", "uuid"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "fmt",
    "json",
] }
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.11.2"
async-trait = "0.1.89"
bcrypt = "0.17.1"
uuid = { version = "1.18.0", features = ["v4"] }
jsonwebtoken = "9.3.1"
thiserror = "2.0.16"
chrono = "0.4.41"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
